--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,8 @@ body{
 
 }
 h1{
-  max-width: 10%;
-  margin:3rem auto;
+  /* max-width: 20%; */
+  margin-top: 2rem;
 }
 
 input::-webkit-outer-spin-button,
@@ -66,7 +66,7 @@ input::-webkit-inner-spin-button {
 }
 .container{
   max-width: 70%;
-  margin: 0 auto;
+  margin-top: 3rem;
   background-color: var(--White);
   border-radius: 1rem;
   padding: 4rem;
